console logging using document.getElementById working. need to fix grid jump on mobile again

--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,7 @@
   background-color: #171738;
   height: 20%;
   padding: 0.5rem;
+  overflow-y: scroll;
 }
 
 .content {
@@ -115,6 +116,10 @@
     width: 7vw;
     height: 7vw;
   }
+
+  .top {
+    /* height: 50%; */
+  }
   .inventory {
     margin-bottom: 0;
 
@@ -124,6 +129,6 @@
   }
 
   .console {
-    height: 20%;
+    /* height: 20%; */
   }
 }
